# ChangeLog for dev-python/carbon
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/carbon/ChangeLog,v 1.6 2014/01/26 04:35:05 idella4 Exp $

*carbon-0.9.12 (26 Jan 2014)

  26 Jan 2014; Ian Delaney <idella4@gentoo.org> +carbon-0.9.12.ebuild,
  +files/carbon-0.9.12-no-data-files.patch:
  bump; update rdep, re-make of no-data-files.patch for new version

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> carbon-0.9.9-r2.ebuild,
  carbon-0.9.10.ebuild, carbon-0.9.10-r1.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

*carbon-0.9.10-r1 (09 May 2013)

  09 May 2013; Justin Lecher <jlec@gentoo.org> +carbon-0.9.10-r1.ebuild,
  metadata.xml:
  Bump to distutils-r1

*carbon-0.9.10 (22 Jun 2012)

  22 Jun 2012; Marien Zwart <marienz@gentoo.org> +carbon-0.9.10.ebuild,
  +files/no-data-files.patch:
  Version bump, fix install paths (bug #417221, thanks to Tom Prince and Ian
  Delaney). Remove old broken version.

*carbon-0.9.9-r2 (22 Mar 2012)

  22 Mar 2012; Patrick Lauer <patrick@gentoo.org> +carbon-0.9.9-r2.ebuild,
  -carbon-0.9.9-r1.ebuild:
  Fixing install path

*carbon-0.9.9-r1 (22 Mar 2012)

  22 Mar 2012; Patrick Lauer <patrick@gentoo.org> +carbon-0.9.9-r1.ebuild,
  +metadata.xml:
  Initial import, ebuild borrowed from kormoc overlay