@@ -2,20 +2,23 @@
 Hash: SHA256
 
 AUX carbon-0.9.12-no-data-files.patch 817 SHA256 e0f40bb173b4687238a6bf003baab74a5d5b1f6c9bc948a1afd10bb805ca2d4d SHA512 549499d5f1963f2eadc9858e0744a1b2b30830e4069f6881d3d912b9709e3cc0f0c3c01730790c975a57209b671c6592c1dd650028a8a63dcab84fe960f5ed58 WHIRLPOOL a41b7f90c124740eaaf2ed7220247d1c4f8620a27083c4851b5fa707768a1921419b569279b71d7958ab676ea04fe11bb5478df929a3c3b39078f014e548a586
+AUX carbon.confd 119 SHA256 d03e9aad2764b4b5d55a10a0802fcbd0047408c6fd520abd768c230abc858ec7 SHA512 049d2e3c9e9ae9375f485568185b14fb326a85f13a5f40e19a5d26aaecd0b98a61f011dbe4335110b6e3314ec52d308fea8f577df8b29b5d675fd7763a02788f WHIRLPOOL e04bc43c0270fcf3d8eccda61066da1183722d1f8ebddae7c2e02abaac45a33cd7e9969d660c88f4e56854770d610574932009c4078c781dd52dccbfb4ba9d2c
+AUX carbon.initd 1371 SHA256 be3c58d980729e3ea5d4cfde0e721d1dfeb9ad23015ccd3df63147dfcc21aa74 SHA512 52f2dfe970b5270900db815cfc52036d4ced105c30af5725705e147b9e0c25fada3da7ab937ba55f6d22229ac52ddb24bbcdd9d1cc90edb5ebe94cc612ae4e46 WHIRLPOOL 4567d60494a6a9502934d880c75bf08ce7b130c5c1f6f75b8820448d2585eb379a71220faf4235b076e27272ed339d8b9310bfdd77e6ab9befe667f42b9853d7
 AUX no-data-files.patch 881 SHA256 d8d5b61c21df35042a51433d72495040cfa172f82fbe4b2ef5e54fb8b41cff63 SHA512 13c2e946c42bfabc643ec39a0d384b887fb1ceaee9791e0f7c2ed037069492aa80ff4f4b593dbba7253c6e5f553e0a7d1677333a896067219df4206f742d64d7 WHIRLPOOL ca8040abfdefb1ff6ecb8737de40f303cb869c618dca41f0d09d1c065e60c65a17709adadce057b8c779a0dfa24a3ea6df045e858681bf207f6db6be7fe6ac06
 DIST carbon-0.9.10.tar.gz 42208 SHA256 f1a1d61a0bf9e2ff3c42c01310a59572e527139c7ce73bdbeb25d8813b78d2b9 SHA512 cc1ea301453c88a40e025f9039f375acd17c42c22c4022bba1fde7fe69dec601d0bafd2611d758d80957e0e9de0fe47d2b87a8320a0e9b6a83e764e0b1d3bed9 WHIRLPOOL c1f814cd5c9e0e0e83a8690870bed6005f0e1aabfb6c62bf905cd093333e940aedc260d6a1547033c3e43e4014104dcdc301a5c959b5b8965f421849ac425140
 DIST carbon-0.9.12.tar.gz 47450 SHA256 df4b521a449b888fc901d11abffc9e7eb070a8670e341caa0e13ab8f3029cddf SHA512 060b3d20cf2bd95be22fba30a24591361c772edaaaa99117616f4a01a31eab9395d84c5eb835408fac2c1bc36b70950e260d56456879489a9ee3248c6c4e3f33 WHIRLPOOL c6021492dc5ed3c9c4cefe173b1e0592b18e6c2d49e48cd74059c4d3822ea0b2cf253bedc9a67f7fa37dd8944e06835a1da959300e3c6e0f1759622b19b0c61e
 DIST carbon-0.9.9.tar.gz 39813 SHA256 b3d42e3b93c09a82646168d7439e25cfc52143d77eba8a1f8ed45e415bb3b5cb SHA512 9768f25590a645ac648ee04fc71e0de4a882be1a8fdd2e15c2ada2bf6a6b1a2fe750dea6140b1dba5d65ee76a0c41a9e31a18d45a7826d484cca2b4cf7902619 WHIRLPOOL 29d54db219e0bf80e2d7b49c0a3e7bdbe12ecf4619f941806ab75b14204c79f5189537f5a835af49fdfd961d4493b6e9c6b176c0448df73e33a7e8a0c478d868
 EBUILD carbon-0.9.10-r1.ebuild 1370 SHA256 5cfa612f0be8161c2fc59f9a1e6dc1c260a0a932f55f5ff3595e5c91d453f88a SHA512 a36694d7e60f19bb60ecabbc82bc69565420628fb310f507b79f54cd42fe968da8f5b51ba94f70cf2d82b6246b1a2ddb18d0aa929e45f68b2dc693310b6f74ae WHIRLPOOL efd2b64744887a2ad41c2bd4ba5c57b89831495a0ccc95ecf8e5880579099b7c2d9c9c62b5f047ae9db83c4288755d385392e5b7f659dd6b0decb498c7387116
 EBUILD carbon-0.9.10.ebuild 1331 SHA256 d5fb40302d3fb6a73e7c7cc3ddb835be35788c6cab064d2c1a8698459ddd1ec7 SHA512 520fdaeb3e95de8d35aa33597a78ca18299c1e1c25e5e83f7c67f564dcc3441bd57e87e8db16e06f88371e53a5e925bb32919600fd5c0bd6e18e507c8e7b3196 WHIRLPOOL ca05c0112a0796a6793934a64fe42633918844d1acd56faef8e4dad9d2f9da52e298683ac786b8e72143bb9467a79e4289572fbf46afbd42b784704a754f0ef5
+EBUILD carbon-0.9.12-r1.ebuild 1980 SHA256 ea9b975144d1b186bdc83ec1d6ce9ca83d83279c46a0e823126a43065239bbb5 SHA512 c82c33259e20c2b283be0d6eee81b7005b9f37897f9ca2ec681495d8105bb07472f25b01b424413161dee7dd144a39387b5aed92e962153bff562fb6117d34fc WHIRLPOOL 4d68037cca89d5eb2fab5e771c321f20ca5fb4e12de4d9bc10bb03b8976740437973f635d2b193eae06309f54f1dcdb4cfb0c3f6690caeaaede06285ee8de153
 EBUILD carbon-0.9.12.ebuild 1391 SHA256 208d16c7d93210cc051d11667f512e0a6e940b76731538d0f22bb4c6fd3782e2 SHA512 1025fa90f04beb068ac6ed98282a0e24207305cdbe429ad5e46550cd976455e761681636eb829a369b0d05790dffd20ea4ab5c2b5b4ffe43adac32da2e0b73a7 WHIRLPOOL dd964b5774c1a180fb4caaff931e3d22eddf431b05b5356177b4191d121be8a437d51a397ad091a65c8f76f3c53af366dbcad2c0355840cd18ca897d0066fefb
 EBUILD carbon-0.9.9-r2.ebuild 727 SHA256 cec122b523e4166e19b1014ee3803491fae559aa366bf866785e606fab32add2 SHA512 7baa8c93a8ff233c9bd8c7e42293c7f5ac5c1cce536c3d35d5148763986e256779b532d038a3dc73f7367558cdc9688f6ea791d581913b069df689e46fc2cc0e WHIRLPOOL e8e2eb6850c3a837347f22eb3df3eb44bde1d3b4d5aa2f9f79fda5d271bf32adad864ca16f79592db6138a85a4fe4101e48bc9471a20f617b06b49105626dfd7
-MISC ChangeLog 1330 SHA256 9f2d1c764d392459c4cb7afce87359b2a8c6327d17e620e135585d1c8f385863 SHA512 ca4214aedf8b0d111f9ae48215109f7d0b5d21b0b3da464456f166a8b97ab19c2ac0309c27f23480b77d14e920520e4c4d9f72ccae2abd76def4bcebe33f8dc6 WHIRLPOOL 47015f991517a6ddbcd7ce0c0785b53d4989ab68acf22a714420c23b2aba64e0ffe0fe005706b8a686c410f24231391c1630e6cd35330b7680ac74ad302a54bf
+MISC ChangeLog 1577 SHA256 dca991eba9eb3908877a38b237168984e658c6d9329caf37a173117565a3a05b SHA512 324dec353302fec300b48138e9e2180b2ec3e21e75f38ffbdda991994f1724dc61d1d5cf41c82b319613abec7b061a38aff7d5465b21d45ba6eb9a450632db2f WHIRLPOOL e6c567882d13dc1a774f81ee3ef34549023e54f3cc5080ebec5a66c03f0c6675eb9f0e08b2c84c5c052d571fbaa372a60db7d96906a785e11218cc43bb519057
 MISC metadata.xml 234 SHA256 9b781d9e32a98333895dc005648643f5355d04bdd8cf7c7d05c1659b050ccc1c SHA512 73cf93f1f60626cef0eb052ce9be4ec3ebd2b0eb9ca4fbdee5e0e79312100983dfa4b03da2f67a737fab381f7524af74ac602a0e8bbfd7278cfbc5a557276898 WHIRLPOOL df20df5cb0411c10dec6733216839ca73dc0db4be703c2f7250a5db710082cf9a4de3b9aaa1833d50a834e0a4cef260b30094e671e54919d024cc456c726005b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLkjx8ACgkQso7CE7gHKw2FKQCeNRv3ouzp0YyMoLG+UwNQRlTx
-UWYAoMfNp7zrBhwsQDARMbDBBkLd53OK
-=z+FO
+iF4EAREIAAYFAlME234ACgkQKiQSS7ZY+hNsbwEAhjVTiG097pwF3OpVc4NtnNpD
+9We2+Hlae1aTZRmb6GYA/3TNCatvvvqbmr4donNsTD0mQy6Lk9l0q2p9n5oQuyAl
+=wo8P
 -----END PGP SIGNATURE-----
