@@ -3,11 +3,11 @@ DEPEND=mpi? ( virtual/mpi ) virtual/fortran
 DESCRIPTION=Large-scale Atomic/Molecular Massively Parallel Simulator
 EAPI=5
 HOMEPAGE=http://lammps.sandia.gov/
-IUSE=doc examples gzip lammps-memalign mpi
+IUSE=doc examples gzip lammps-memalign mpi static-libs
 KEYWORDS=~amd64
 LICENSE=GPL-2
 RDEPEND=mpi? ( virtual/mpi ) virtual/fortran
 SLOT=0
 SRC_URI=http://lammps.sandia.gov/tars/lammps-14Feb14.tar.gz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=673d0b21cb38f1145540f211e3e4a093
+_md5_=38169a2c5e3f8ca8e1ec406062e2dec9
