@@ -16,13 +16,17 @@ EBUILD lammps-20140122.ebuild 2474 SHA256 a53722430133c48e79af46ea29e8f7ee2e15b9
 EBUILD lammps-20140129.ebuild 2474 SHA256 20b858dbf8bd276ce996b4a3abef1a67fc65cdac14944330f0a19b75f392854b SHA512 9db041db7994bdafd1470224c0c8f7ab8aec7849300ad3dd3579fe30300388b99cb732a8ab1f34e4c2c2e9a5c39c59cd345af87d81694cbc159abef9d44b64a3 WHIRLPOOL 1b13d493ddd0f0307c936f76d9422a7f601fd95e78c65db4d4524e5a01b546d1926a7b92f8df04c846b58f83631e086d304337552a9d4fa87988397d414ae170
 EBUILD lammps-20140201.ebuild 2474 SHA256 bf06324d1cfb529efb73ba6ac1cf44482b06e754ec8abd41b77dc5f034c34933 SHA512 2aed9cb6853a488c3a91c4f0935d913665e9fb9397ea7e393dd475830b4eea2d0d8b9d900f9f8c2d1516222a54c5d7f5b4460c05ef0524fcae053de7876af481 WHIRLPOOL 1104d3b7ded4e082519590065bc9698b61642fdbb6a75b5c4f0617465b3e5b89312c3c40cccbd86fe2d7fc4265314fa26d72c7c9362bc89b5dd9544217c09c6d
 EBUILD lammps-20140212.ebuild 3576 SHA256 c456eafcf1392e2c8cffe982cbb9f4d64e574bda3e1a9e91a8fbaf47124813a7 SHA512 c6ad5e506320af87cd8f270d494271936e3e7582ec5b7c6162cb8da15e2409747357959c9187fa047b806c8600b117cfafb1a25eca4fde845075b53bb81fc5c3 WHIRLPOOL bd8fb9a8ab1b624ae2645441a84af622371609fc5210678f06f711db510b1f5ad87959f5fa3235789399294fa3301882a7a5da273c8b13e64f72fa24c61d9ed9
-EBUILD lammps-20140214.ebuild 3338 SHA256 9c30c948cb549ccae479a58add6ddcacabd968b2dd40da4b6dce7e30ef1d63df SHA512 8bb9ee51a57043329bcf0e0e8efa524bce1675f5f36ed865887a9b0d5867c77d63f19c5f4e05bea6d20e472042ec4b639cda93cf4c05c670f1e479214b0f3006 WHIRLPOOL b17d8cf61e4d22de227e8e56ed6c42e999440c377716245491210d92cdefccc847fccda749148ac7918c46f2ddfe731b51cd624aa1575aa4a0f4abffa2cb600f
-MISC ChangeLog 3085 SHA256 165a2aef0d8693210cb2bd29d69cd3f0144a225d2db7da78b73276045f14d041 SHA512 459f72f6ad1bf18a7a064857d10b1ef88475173996b25c6133b945db0d0829eba352d4ae73bf64b6a7bd929c052db262a578e16606bcca807d570bc2ae2859e6 WHIRLPOOL 2b04e11f6087151e2a147a72f89a9f92125ab185660db8580b9f5775f2737577cee8ab50983bd19cb804f35dc11d2ea727bb7b80161b1be995a04370926ac741
+EBUILD lammps-20140214.ebuild 3364 SHA256 6e5a3e1755020fe3b207be816deefd071f84b02f2da0b26e2506cbe3531abca8 SHA512 d27beb6c638592dd55b83583a3cd893ce5491139c196439c6bc338a2239955bcc902121f34a59d2800aaba4d7da98cdf9aa2ec8a56ce5716b3f698ce003f6248 WHIRLPOOL c3e8fc0fac3aec7610e8583ee8f80657d9c02cbd3221d1cceed318424f30c5e55b268ccedbe69520a8a72c5df624e1f23cd6442fceb5b80d729f3b2decb94fcc
+MISC ChangeLog 3188 SHA256 db9a10d921e391c8da0221767ce601d466127428cc5bb7de028a978717286c06 SHA512 df40db13c6f0377d5ef88e8b53841ea0112fb627efbf10867f95337f2c65fa45611b615beccfa0641b36bf7c0f3bc04681c61c983e88a4ce76a578979d06f110 WHIRLPOOL 132a97cde264ed3b3485b9f08d8efb595792af739e840954afaf8b8c7f9ba895ad66771e4568252d557218d5a366cf3d3ec9ba29ee87d61ebdff772c78b622d0
 MISC metadata.xml 1518 SHA256 9b336b82f3b9669913073f0e598dc8dec9dc7b3e70c4b66eed0b9e7bd2454a35 SHA512 c111f5f63527f0802921888ca058244f585e3e55763d6c3e86e9ab21e180190efe0f59f5af8b70ab78d9d04f9df4f14f7715beac5a58cf528c2a5c4d08564798 WHIRLPOOL 55e4b0bd07a34cb48326680b048b27e8189c286f4a9e720c5951996b02ee0227a3ff0aa0b385440562003b0e4b1e1f73c7a4b6ed7180e64a6b9874b97f779eb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMDWfoACgkQf15tZKyRylIMfQCdHzXFPGUoFPU1k9peJkybPsh6
-8msAnRgqTb0dM68ckFOYHbxlxrbQRp3I
-=I48e
+iQEcBAEBCAAGBQJTBNePAAoJEOeBhlrCAAWGxcwH/2h/0mr4C9erddJLwaZQ7BCQ
+7AcoI39MoYMzemA0gqm9JwiCh37Z7wOS0EGN8HtIJFT7kk459CDXv22FFFdKc0NT
+UTgtwhbFbVdPjjgy9D+t5U62mnho84D3A3BERD1H41WsTOFB51RjgXi+RxqQvuDz
+4K/tVEGNk2fFwSux/dlY+5lr5WV2N3pbffMOUDv3/1+pkHzAua5nbox7GojSc0SY
+j/2cx8GHAQCaAaVaELHXu85zadB/szVDwRvTBXtRWMUDaVXwqXXEwC+SFVjs6CMF
+7kDhHCXqQOIEY0dumWipQTJAi67jKUzwhjvIJGayfGJDjnC2+uMvqSX62daEr0o=
+=e2Sh
 -----END PGP SIGNATURE-----
