@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/lammps-20140214.ebuild,v 1.1 2014/02/18 13:02:44 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/lammps-20140214.ebuild,v 1.2 2014/02/19 16:10:49 ottxor Exp $
 
 EAPI=5
 
@@ -46,7 +46,7 @@ SRC_URI="http://lammps.sandia.gov/tars/${MY_P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64"
-IUSE="doc examples gzip lammps-memalign mpi"
+IUSE="doc examples gzip lammps-memalign mpi static-libs"
 
 DEPEND="mpi? ( virtual/mpi )"
 RDEPEND="${DEPEND}"
@@ -121,7 +121,7 @@ src_compile() {
 }
 
 src_install() {
-	newlib.a "src/liblammps_serial.a" "liblammps.a"
+	use static-libs && newlib.a "src/liblammps_serial.a" "liblammps.a"
 	newlib.so "src/liblammps_serial.so" "liblammps.so"
 	newbin "src/lmp_serial" "lmp"
 	dobin tools/binary2txt
