@@ -1,6 +1,9 @@
 # ChangeLog for sci-physics/lammps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.14 2014/02/18 13:02:44 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.15 2014/02/19 16:10:49 ottxor Exp $
+
+  19 Feb 2014; Christoph Junghans <ottxor@gentoo.org> lammps-20140214.ebuild:
+  added static-libs use flag
 
 *lammps-20140214 (18 Feb 2014)
 
